--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,15 @@ data/*
 !data/external
 data/external/*
 !data/external/raw
+
 !data/raw
 data/raw/*
 !data/raw/final_birds_list_with_no_mistakes.tar.xz
+
+!data/interim
+data/interim/*
+!data/interim/taxonomy*
+
 
 *.ipynb_checkpoints
 *__pycache__
